        - Table (with absolute rows):
          - Row visibility
        - List box:
          - Default state (normal, collapsed, hidden)
          - Max rows
  Changes:
    - Machines that have exactly one item to place them will inherit the item's hidden & enabled statuses
    - Machines that have no items to place them will be marked as disabled
    - Search GUI now opens below the mod_gui button frame, instead of all the way in the corner
  Bugfixes:
    - Fixed that fluidboxes were not being considered for compatible recipes on crafters
---------------------------------------------------------------------------------------------------
Version: 3.0.4
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 3.0.3
Date: 2021-08-14
  Changes:
    - Updated Russian locale by Astorin
    - The search GUI now supports locale-specific widths
  Bugfixes:
    - Fixed a crash when an item has a resource as its place result
    - Fixed a crash when a resource has no products when mined
---------------------------------------------------------------------------------------------------
Version: 3.0.2
Date: 2021-08-10
  Changes:
    - Removed `/RecipeBook` command, replaced with `/rb-refresh-all`
    - Updated to flib 0.8.2
  Bugfixes:
    - Fixed a crash when a mod added or removed pretty much anything to/from an existing save
    - Fixed that a new search GUI would be created every time the player joined a multiplayer game
---------------------------------------------------------------------------------------------------
Version: 3.0.1
Date: 2021-08-09
  Changes:
    - Updated to flib 0.8.1
---------------------------------------------------------------------------------------------------
Version: 3.0.0
Date: 2021-08-09
  Features:
    - Added new pages:
      - Fuel category: fluids and items belonging to each category
      - Group: fluids, items, and recipes belonging to each group