@@ -394,7 +394,7 @@ constants.gui_strings = {
   resource_category = {"gui.rb-resource-category"},
   resource = {"gui.rb-resource"},
   resources = {"gui.rb-resources"},
-  rocket_launch_payloads = {"gui.rb-rocket-launch-payloads"},
+  rocket_launch_product_of = {"gui.rb-rocket-launch-product-of"},
   rocket_launch_products = {"gui.rb-rocket-launch-products"},
   rocket_parts_required = {"gui.rb-rocket-parts-required"},
   search_gui_location = {"gui.rb-search-gui-location"},
@@ -665,7 +665,7 @@ constants.pages = {
     {type = "table", source = "module_effects"},
     {type = "list_box", source = "ingredient_in"},
     {type = "list_box", source = "product_of"},
-    {type = "list_box", source = "rocket_launch_payloads"},
+    {type = "list_box", source = "rocket_launch_product_of"},
     {type = "list_box", source = "rocket_launch_products"},
     {type = "list_box", source = "mined_from"},
     {type = "list_box", source = "researched_in"},
