@@ -143,7 +143,7 @@ rb-resource-categories=Resource categories
 rb-resource-category=Resource category
 rb-resource=Resource
 rb-resources=Resources
-rb-rocket-launch-payloads=Rocket launch payloads
+rb-rocket-launch-product-of=Rocket launch product of
 rb-rocket-launch-products=Rocket launch products
 rb-rocket-parts-required=Rocket parts required
 rb-search-gui-location-center=Center
