@@ -27,6 +27,7 @@ Date: ????
   Changes:
     - Machines that have exactly one item to place them will inherit the item's hidden & enabled statuses
     - Machines that have no items to place them will be marked as disabled
+    - Renamed "rocket launch payloads" to "rocket launch product of"
     - Search GUI now opens below the mod_gui button frame, instead of all the way in the corner
   Bugfixes:
     - Fixed that fluidboxes were not being considered for compatible recipes on crafters
